# crispy-bot

./: .gitignore  README.md
crispy-bot/: README.md  bot.py  entrypoint.sh  pyproject.toml  utils.py
crispy-bot/crispy_bot/plugins/agent_ask/: __init__.py  agent.py  config.py  data_structure.py  llm.py  prompt.py  tool_process.py  tools.py
crispy-bot/crispy_bot/plugins/data_manager/: __init__.py
crispy-bot/crispy_bot/plugins/facts/: __init__.py  config.py  llm.py  request_db.py
crispy-bot/crispy_bot/plugins/help/: __init__.py  command.py  commands_info.py  config.py
crispy-bot/crispy_bot/plugins/joke/: __init__.py  command.py  config.py  llm.py
crispy-bot/crispy_bot/plugins/weather/: __init__.py  config.py  data_fetch.py  llm.py
crispy-bot/crispy_bot/plugins/whoami/: __init__.py  command.py  introductions.py
