[project]
name = "crispy-bot"
version = "0.1.0"
description = "crispy-bot"
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    "nonebot2[fastapi]>=2.5.0",
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot-adapter-console>=0.10.0",
    "nonebot-plugin-docs>=2.5.0",
    "nonebot-plugin-apscheduler>=0.5.0",
    "nonebot-plugin-abbrreply>=1.1.3",
    "litellm>=1.83.8",
    "httpx>=0.28.1",
    "nb-cli>=1.7.2",
    "pyjwt>=2.12.1",
    "cryptography>=46.0.7",
    "langchain>=1.2.15",
    "langchain-openai>=1.1.10",
    "langchain-mcp-adapters>=0.2.2",
    "sqlalchemy>=2.0.49",
    "alembic>=1.18.4",
    "nonebot-plugin-orm>=0.8.3",
    "nonebot-plugin-localstore>=0.7.4",
    "aiosqlite>=0.22.1",
    "nonebot-plugin-session>=0.3.2",
    "nonebot-plugin-chatrecorder>=0.7.0",
]

[tool.nonebot]
plugin_dirs = []
builtin_plugins = ["echo"]

[tool.nonebot.adapters]
nonebot-adapter-onebot = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
    { name = "OneBot V12", module_name = "nonebot.adapters.onebot.v12" }
]
"@local" = []

[tool.nonebot.plugins]
"@local" = [
    "crispy_bot.plugins.data_manager",
    "crispy_bot.plugins.agent_ask",
    "crispy_bot.plugins.facts",
    "crispy_bot.plugins.help",
    "crispy_bot.plugins.joke",
    "crispy_bot.plugins.weather",
    "crispy_bot.plugins.whoami"
]
nonebot-plugin-docs = ["nonebot_plugin_docs"]
nonebot-plugin-apscheduler = ["nonebot_plugin_apscheduler"]
nonebot-plugin-abbrreply = ["nonebot_plugin_abbrreply"]
nonebot-plugin-orm = ["nonebot_plugin_orm"]
nonebot-plugin-localstore = ["nonebot_plugin_localstore"]
nonebot-plugin-session = ["nonebot_plugin_session"]
nonebot-plugin-chatrecorder = ["nonebot_plugin_chatrecorder"]
